k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: secaudit
  labels:
    app.kubernetes.io/name: secaudit
    app.kubernetes.io/component: namespace
